From small to big, Adding changes to the uzbek version

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 		<a href="#home" class="active" onclick="closeOtherBars()"><img src="images/logo.png" alt="Наш Логотип" width="40"></a>
 		<a href="#about" onclick="closeOtherBars()">О нас</a>
 		<a href="#services" onclick="closeOtherBars()">Наши услуги</a>
-		<a href="#extra-big-fountain" onclick="closeOtherBars()">Большой фонтан</a>
-		<a href="#big-fountain" onclick="closeOtherBars()">Средний фонтан</a>
 		<a href="#small-fountain" onclick="closeOtherBars()">Маленький фонтан</a>
+		<a href="#big-fountain" onclick="closeOtherBars()">Средний фонтан</a>
+		<a href="#extra-big-fountain" onclick="closeOtherBars()">Большой фонтан</a>
 		<a href="#contact" onclick="closeOtherBars()">Свяжитесь с нами</a>
+		<a href="#our_works" onclick="closeOtherBars()">Наши Работы</a>
 		<a href="index_uz.html" class="lang">O'z</a>
 		<p class="underline">|</p>
 		<a href="index.html" class="lang1">Ру</a>
@@ -92,141 +93,6 @@
 				</section>
 
 				<!-- Section -->
-					<section id="extra-big-fountain">
-						<header>
-							<br><br><br>
-							<h2>Большой шоколадный фонтан</h2>
-						</header>
-						<div class="content">
-							<br><br><br>
-							<div class="gallery">
-								<a href="images/gallery/fulls/fountain_5tier_0.jpg" class="landscape"><img src="images/gallery/fulls/fountain_5tier_0.jpg" alt="" /></a>
-							</div>
-							<ul class="feature-icons">
-								<li class="icon solid fa-balance-scale-right">Вместимость шоколада - <b>8 кг</b>.</li>
-								<li class="icon solid fa-layer-group">5 ярусов</li>
-								<li class="icon solid fa-arrows-alt-v">Высота - <b>80 см</b></li>
-								<li class="icon solid fa-user-friends">Для торжест с количеством гостей <b>100 персон</b> и более</li>
-								<div class="fields">
-									<p><strong>Тариф: </strong></p>
-									<div class="field half">
-										<input type="radio" value="tarif-optima-extra" id="tarif-optima-extra" name="tarif-extra" onclick="updateCostXBig()">
-										<label for="tarif-optima-extra">
-											<b>Оптима</b>
-											<br>&#x2022;  8 кг лучшего бельгийского шоколада
-											<br>&#x2022;  1 кг бельгийского какао масла
-										</label>
-									</div>
-									<div class="field half">
-										<input type="radio" value="tarif-maxima-extra" id="tarif-maxima-extra" name="tarif-extra" checked onclick="updateCostXBig()">
-										<label for="tarif-maxima-extra">
-											<b>Максима</b>
-											<br>&#x2022;  8 кг лучшего бельгийского шоколада
-											<br>&#x2022;  1 кг бельгийского какао масла
-											<br>&#x2022;  1.5 кг маршмеллоу из натурального сока
-											<br>&#x2022;  1.5 кг профитролей
-											<br>&#x2022;  8 кг сезонных фруктов
-											<br>&#x2022;  3.5 кг клубники
-											<br>&#x2022;  красивая нарезка фруктов
-										</label>
-									</div>
-								</div>
-								<div class="fields">
-									<p><strong>Вид шоколада: </strong></p>
-									<div class="field half" style="float: left; width: 50%;">
-										<input type="radio" id="milk-extra" value="milk-extra" name="choco-type-extra" checked onclick="updateCostBig()">
-										<label for="milk-extra">Молочный</label>
-									</div>
-									<div class="field half" style="float: left; width: 50%;">
-										<input type="radio" id="white-extra" value="white-extra" name="choco-type-extra" onclick="updateCostBig()">
-										<label for="white-extra">Белый</label>
-									</div>
-									<div class="field half" style="float: left; width: 50%;">
-										<input type="radio" id="orange-extra" value="orange-extra" name="choco-type-extra" onclick="updateCostBig()">
-										<label for="orange-extra">Апельсиновый</label>
-									</div>
-									<div class="field half" style="float: left; width: 50%;">
-										<input type="radio" id="strawberry-extra" value="strawberry-extra" name="choco-type-extra" onclick="updateCostBig()">
-										<label for="strawberry-extra">Клубничный</label>
-									</div>
-									<div class="field half" style="float: left; width: 50%;">
-										<input type="radio" id="lime-extra" value="lime-extra" name="choco-type-extra" onclick="updateCostBig()">
-										<label for="lime-extra">Лайм</label>
-									</div>
-								</div>
-								<li class="icon solid fa-solid fa-money-bill-wave" id="cost-extra-big">Стоимость услуги: <b>6 200 000</b> сум</li>
-							</ul>
-						</div>
-					</section>
-
-					<section id="big-fountain">
-						<header>
-							<br><br><br>
-							<h2>Средний шоколадный фонтан</h2>
-						</header>
-						<div class="content">
-							<br><br><br>
-							<div class="gallery">
-								<a href="images/gallery/fulls/fontan17.jpg" class="landscape"><img src="images/gallery/thumbs/fontan17.jpg" alt="" /></a>
-							</div>
-							<ul class="feature-icons">
-								<li class="icon solid fa-balance-scale-right">Вместимость шоколада - 5 кг.</li>
-								<li class="icon solid fa-layer-group">4 яруса</li>
-								<li class="icon solid fa-arrows-alt-v">Высота - 60 см</li>
-								<li class="icon solid fa-user-friends">Прекрасно подойдёт для торжест с количеством гостей 60 персон и более</li>
-								<div class="fields">
-									<p><strong>Тариф: </strong></p>
-									<div class="field half">
-										<input type="radio" value="tarif-optima" id="tarif-optima" name="tarif" onclick="updateCostBig()">
-										<label for="tarif-optima">
-											<b>Оптима</b>
-											<br>&#x2022;  5 кг лучшего бельгийского шоколада
-											<br>&#x2022;  0.5 кг бельгийского какао масла
-										</label>
-									</div>
-									<div class="field half">
-										<input type="radio" value="tarif-maxima" id="tarif-maxima" name="tarif" checked onclick="updateCostBig()">
-										<label for="tarif-maxima">
-											<b>Максима</b>
-											<br>&#x2022;  5 кг лучшего бельгийского шоколада
-											<br>&#x2022;  0.5 кг бельгийского какао масла
-											<br>&#x2022;  1 кг маршмеллоу из натурального сока
-											<br>&#x2022;  1 кг профитролей
-											<br>&#x2022;  5 кг сезонных фруктов
-											<br>&#x2022;  2 кг клубники
-											<br>&#x2022;  красивая нарезка фруктов
-										</label>
-									</div>
-								</div>
-								<div class="fields">
-									<p><strong>Вид шоколада: </strong></p>
-									<div class="field half" style="float: left; width: 50%;">
-										<input type="radio" id="milk" value="milk" name="choco-type" checked onclick="updateCostBig()">
-										<label for="milk">Молочный</label>
-									</div>
-									<div class="field half" style="float: left; width: 50%;">
-										<input type="radio" id="white" value="white" name="choco-type" onclick="updateCostBig()">
-										<label for="white">Белый</label>
-									</div>
-									<div class="field half" style="float: left; width: 50%;">
-										<input type="radio" id="orange" value="orange" name="choco-type" onclick="updateCostBig()">
-										<label for="orange">Апельсиновый</label>
-									</div>
-									<div class="field half" style="float: left; width: 50%;">
-										<input type="radio" id="strawberry" value="strawberry" name="choco-type" onclick="updateCostBig()">
-										<label for="strawberry">Клубничный</label>
-									</div>
-									<div class="field half" style="float: left; width: 50%;">
-										<input type="radio" id="lime" value="lime" name="choco-type" onclick="updateCostBig()">
-										<label for="lime">Лайм</label>
-									</div>
-								</div>
-								<li class="icon solid fa-solid fa-money-bill-wave" id="cost-big">Стоимость услуги: <b>3 900 000</b> сум</li>
-							</ul>
-						</div>
-					</section>
-				
-				<!-- Section -->
 				<section id="small-fountain">
 					<header>
 						<br><br><br>
@@ -294,6 +160,139 @@
 					</div>
 				</section>
 
+				<section id="big-fountain">
+					<header>
+						<br><br><br>
+						<h2>Средний шоколадный фонтан</h2>
+					</header>
+					<div class="content">
+						<br><br><br>
+						<div class="gallery">
+							<a href="images/gallery/fulls/fontan17.jpg" class="landscape"><img src="images/gallery/thumbs/fontan17.jpg" alt="" /></a>
+						</div>
+						<ul class="feature-icons">
+							<li class="icon solid fa-balance-scale-right">Вместимость шоколада - 5 кг.</li>
+							<li class="icon solid fa-layer-group">4 яруса</li>
+							<li class="icon solid fa-arrows-alt-v">Высота - 60 см</li>
+							<li class="icon solid fa-user-friends">Прекрасно подойдёт для торжест с количеством гостей 60 персон и более</li>
+							<div class="fields">
+								<p><strong>Тариф: </strong></p>
+								<div class="field half">
+									<input type="radio" value="tarif-optima" id="tarif-optima" name="tarif" onclick="updateCostBig()">
+									<label for="tarif-optima">
+										<b>Оптима</b>
+										<br>&#x2022;  5 кг лучшего бельгийского шоколада
+										<br>&#x2022;  0.5 кг бельгийского какао масла
+									</label>
+								</div>
+								<div class="field half">
+									<input type="radio" value="tarif-maxima" id="tarif-maxima" name="tarif" checked onclick="updateCostBig()">
+									<label for="tarif-maxima">
+										<b>Максима</b>
+										<br>&#x2022;  5 кг лучшего бельгийского шоколада
+										<br>&#x2022;  0.5 кг бельгийского какао масла
+										<br>&#x2022;  1 кг маршмеллоу из натурального сока
+										<br>&#x2022;  1 кг профитролей
+										<br>&#x2022;  5 кг сезонных фруктов
+										<br>&#x2022;  2 кг клубники
+										<br>&#x2022;  красивая нарезка фруктов
+									</label>
+								</div>
+							</div>
+							<div class="fields">
+								<p><strong>Вид шоколада: </strong></p>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="milk" value="milk" name="choco-type" checked onclick="updateCostBig()">
+									<label for="milk">Молочный</label>
+								</div>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="white" value="white" name="choco-type" onclick="updateCostBig()">
+									<label for="white">Белый</label>
+								</div>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="orange" value="orange" name="choco-type" onclick="updateCostBig()">
+									<label for="orange">Апельсиновый</label>
+								</div>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="strawberry" value="strawberry" name="choco-type" onclick="updateCostBig()">
+									<label for="strawberry">Клубничный</label>
+								</div>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="lime" value="lime" name="choco-type" onclick="updateCostBig()">
+									<label for="lime">Лайм</label>
+								</div>
+							</div>
+							<li class="icon solid fa-solid fa-money-bill-wave" id="cost-big">Стоимость услуги: <b>3 900 000</b> сум</li>
+						</ul>
+					</div>
+				</section>
+
+				<section id="extra-big-fountain">
+					<header>
+						<br><br><br>
+						<h2>Большой шоколадный фонтан</h2>
+					</header>
+					<div class="content">
+						<br><br><br>
+						<div class="gallery">
+							<a href="images/gallery/fulls/fountain_5tier_0.jpg" class="landscape"><img src="images/gallery/fulls/fountain_5tier_0.jpg" alt="" /></a>
+						</div>
+						<ul class="feature-icons">
+							<li class="icon solid fa-balance-scale-right">Вместимость шоколада - <b>8 кг</b>.</li>
+							<li class="icon solid fa-layer-group">5 ярусов</li>
+							<li class="icon solid fa-arrows-alt-v">Высота - <b>80 см</b></li>
+							<li class="icon solid fa-user-friends">Для торжест с количеством гостей <b>100 персон</b> и более</li>
+							<div class="fields">
+								<p><strong>Тариф: </strong></p>
+								<div class="field half">
+									<input type="radio" value="tarif-optima-extra" id="tarif-optima-extra" name="tarif-extra" onclick="updateCostXBig()">
+									<label for="tarif-optima-extra">
+										<b>Оптима</b>
+										<br>&#x2022;  8 кг лучшего бельгийского шоколада
+										<br>&#x2022;  1 кг бельгийского какао масла
+									</label>
+								</div>
+								<div class="field half">
+									<input type="radio" value="tarif-maxima-extra" id="tarif-maxima-extra" name="tarif-extra" checked onclick="updateCostXBig()">
+									<label for="tarif-maxima-extra">
+										<b>Максима</b>
+										<br>&#x2022;  8 кг лучшего бельгийского шоколада
+										<br>&#x2022;  1 кг бельгийского какао масла
+										<br>&#x2022;  1.5 кг маршмеллоу из натурального сока
+										<br>&#x2022;  1.5 кг профитролей
+										<br>&#x2022;  8 кг сезонных фруктов
+										<br>&#x2022;  3.5 кг клубники
+										<br>&#x2022;  красивая нарезка фруктов
+									</label>
+								</div>
+							</div>
+							<div class="fields">
+								<p><strong>Вид шоколада: </strong></p>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="milk-extra" value="milk-extra" name="choco-type-extra" checked onclick="updateCostXBig()">
+									<label for="milk-extra">Молочный</label>
+								</div>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="white-extra" value="white-extra" name="choco-type-extra" onclick="updateCostXBig()">
+									<label for="white-extra">Белый</label>
+								</div>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="orange-extra" value="orange-extra" name="choco-type-extra" onclick="updateCostXBig()">
+									<label for="orange-extra">Апельсиновый</label>
+								</div>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="strawberry-extra" value="strawberry-extra" name="choco-type-extra" onclick="updateCostXBig()">
+									<label for="strawberry-extra">Клубничный</label>
+								</div>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="lime-extra" value="lime-extra" name="choco-type-extra" onclick="updateCostXBig()">
+									<label for="lime-extra">Лайм</label>
+								</div>
+							</div>
+							<li class="icon solid fa-solid fa-money-bill-wave" id="cost-extra-big">Стоимость услуги: <b>6 200 000</b> сум</li>
+						</ul>
+					</div>
+				</section>
 
 				<!-- Section -->
 					<section id="contact">
@@ -326,10 +325,10 @@
 						</div>
 					</section>
 
-					<section id="services">
+					<section id="our_works">
 						<header>
 							<br><br><br>
-							<h2>Галлерея</h2>
+							<h2>Наши Работы</h2>
 						</header>
 						<div class="content">
 							<br><br><br>
