--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 		<div class="topnav" id="myTopnav">
 		<a href="#home" class="active" onclick="closeOtherBars()"><img src="images/logo.png" alt="Наш Логотип" width="40"></a>
+		<a href="#" class="brand">ChocoParty Co.</a>
 		<a href="#about" onclick="closeOtherBars()">О нас</a>
 		<a href="#services" onclick="closeOtherBars()">Наши услуги</a>
 		<a href="#small-fountain" onclick="closeOtherBars()">Маленький фонтан</a>
