Adding page in English, fixing weight, telegram link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="ru">
 	<head>
 		<title>Шоколадный фонтан в Ташкенте ChocoParty</title>
 		<meta charset="utf-8" />
@@ -22,9 +22,9 @@
 		<a href="#extra-big-fountain" onclick="closeOtherBars()">Большой фонтан</a>
 		<a href="#contact" onclick="closeOtherBars()">Свяжитесь с нами</a>
 		<a href="#our_works" onclick="closeOtherBars()">Наши Работы</a>
-		<a href="index_uz.html" class="lang">O'z</a>
-		<p class="underline">|</p>
+		<a href="uz" class="lang">O'z</amaster's>
 		<a href="index.html" class="lang1">Ру</a>
+		<a href="en" class="lang">En</a>
 		<a href="javascript:void(0);" class="icon" onclick="openOtherBars()">
 			<i class="fa fa-bars"></i>
 		</a>
@@ -60,7 +60,7 @@
 							<br><br><br>
 							<p><b><i>Уважаемые Дамы и Господа!</i></b></br>Наша компания <b><i>ChocoParty</i></b> рада предложить Вам оригинальный способ сделать Ваш праздник ещё более ярким и незабываемым
 							!</p>
-							<p>Что такое шоколадный фонтан?<br/><i><b>Шоколадный фонтан</b></i> - это настоящий фонтан, но вместо воды в нём циркулирует вкуснейший шоколад. По принципу фондю Вы можете обмакивать в шоколаде кусочки различных фруктов, печенья, зефир и т.д.
+							<p>Что такое шоколадный фонтан?<br/><i><b>Шоколадный фонтан</b></i> - это настоящий фонтан, но вместо воды в нем циркулирует вкуснейший бельгийский шоколад. По принципу фондю Вы можете обмакивать в шоколаде кусочки различных фруктов, печенья, зефир и т.д.
 							<br/>Шоколадный фонтан украсит Вашу свадьбу, день рождения, корпоративную вечеринку, банкет, или другое торжество и оставит у Ваших гостей сладкие и незабываемые воспоминания о Вашем празднике.</p>
 							
 							<span class="image medium"><img src="images/logo.png" alt="Наш Логотип" width="50"></span>
@@ -248,7 +248,7 @@
 									<input type="radio" value="tarif-optima-extra" id="tarif-optima-extra" name="tarif-extra" onclick="updateCostXBig()">
 									<label for="tarif-optima-extra">
 										<b>Оптима</b>
-										<br>&#x2022;  8 кг лучшего бельгийского шоколада
+										<br>&#x2022;  7 кг лучшего бельгийского шоколада
 										<br>&#x2022;  1 кг бельгийского какао масла
 									</label>
 								</div>
@@ -256,7 +256,7 @@
 									<input type="radio" value="tarif-maxima-extra" id="tarif-maxima-extra" name="tarif-extra" checked onclick="updateCostXBig()">
 									<label for="tarif-maxima-extra">
 										<b>Максима</b>
-										<br>&#x2022;  8 кг лучшего бельгийского шоколада
+										<br>&#x2022;  7 кг лучшего бельгийского шоколада
 										<br>&#x2022;  1 кг бельгийского какао масла
 										<br>&#x2022;  1.5 кг маршмеллоу из натурального сока
 										<br>&#x2022;  1.5 кг профитролей
@@ -318,7 +318,7 @@
 								</li>
 								<li>
 									<ul class="icons">
-										<li><a href="https://telegram.me/timyusupov" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+										<li><a href="https://telegram.me/choco_party" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
 									</ul>
 								</li>
 							</ul>
