Fixing links, adding phone number

--- a/en.html
+++ b/en.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html lang="en">
+<html lang>
 	<head>
 		<title>Chocolate Fountain in Tashkent ChocoParty</title>
 		<meta charset="utf-8" />
@@ -22,9 +22,9 @@
 		<a href="#extra-big-fountain" onclick="closeOtherBars()">Large fountain</a>
 		<a href="#contact" onclick="closeOtherBars()">Contact Us</a>
 		<a href="#our_works" onclick="closeOtherBars()">Our Works</a>
-		<a href="uz" class="lang">O'z</a>
+		<a href="uz.html" class="lang">O'z</a>
 		<a href="index.html" class="lang">Ру</a>
-        <a href="en" class="lang1">En</a>
+        <a href="en.html" class="lang1">En</a>
 		<a href="javascript:void(0);" class="icon" onclick="openOtherBars()">
 			<i class="fa fa-bars"></i>
 		</a>
@@ -310,8 +310,7 @@
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<!-- <a href="#">(000) 000-0000</a> -->
-									+998(90)-0976567
+									+998(90)-0976567<br>+998(94)-8940008
 								</li>
 								<li>
 									<h3>Name</h3>
