--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html lang="ru">
+<html lang>
 	<head>
 		<title>Шоколадный фонтан в Ташкенте ChocoParty</title>
 		<meta charset="utf-8" />
@@ -22,9 +22,9 @@
 		<a href="#extra-big-fountain" onclick="closeOtherBars()">Большой фонтан</a>
 		<a href="#contact" onclick="closeOtherBars()">Свяжитесь с нами</a>
 		<a href="#our_works" onclick="closeOtherBars()">Наши Работы</a>
-		<a href="uz" class="lang">O'z</amaster's>
+		<a href="uz.html" class="lang">O'z</amaster's>
 		<a href="index.html" class="lang1">Ру</a>
-		<a href="en" class="lang">En</a>
+		<a href="en.html" class="lang">En</a>
 		<a href="javascript:void(0);" class="icon" onclick="openOtherBars()">
 			<i class="fa fa-bars"></i>
 		</a>
@@ -310,7 +310,7 @@
 								<li>
 									<h3>Телефон</h3>
 									<!-- <a href="#">(000) 000-0000</a> -->
-									+998(90)-0976567
+									+998(90)-0976567<br>+998(94)-8940008
 								</li>
 								<li>
 									<h3>Имя</h3>
