--- a/uz.html
+++ b/uz.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html lang="uz">
+<html lang>
 	<head>
 		<title>Shokoladli Favvora Toshkentda ChocoParty</title>
 		<meta charset="utf-8" />
@@ -22,9 +22,9 @@
 		<a href="#extra-big-fountain" onclick="closeOtherBars()">Katta favvora</a>
 		<a href="#contact" onclick="closeOtherBars()">Aloqa</a>
 		<a href="#our_works" onclick="closeOtherBars()">Ishlarimiz</a>
-		<a href="uz" class="lang1">O'z</a>
+		<a href="uz.html" class="lang1">O'z</a>
 		<a href="index.html" class="lang">Ру</a>
-		<a href="en" class="lang">En</a>
+		<a href="en.html" class="lang">En</a>
 		<a href="javascript:void(0);" class="icon" onclick="openOtherBars()">
 			<i class="fa fa-bars"></i>
 		</a>
@@ -314,7 +314,7 @@
 								</li>
 								<li>
 									<h3>Telefon</h3>
-									+998(90)-0976567
+									+998(90)-0976567<br>+998(94)-8940008
 								</li>
 								<li>
 									<h3>Ism</h3>
