Adding Instagram Link

--- a/uz.html
+++ b/uz.html
@@ -323,6 +323,7 @@
 								<li>
 									<ul class="icons">
 										<li><a href="https://telegram.me/choco_party" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+										<li><a href="https://instagram.com/chocoparty.uz" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 								</li>
 							</ul>
