Updated images to ours

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan4.jpg" class="landscape"><img src="images/gallery/thumbs/fontan4.jpg" alt="" /></a>
 							<a href="images/gallery/fulls/fontan2.jpg" class="portrait"><img src="images/gallery/thumbs/fontan2.jpg" alt="" /></a>
-							<a href="images/gallery/fulls/fontan8.jpg" class="portrait"><img src="images/gallery/thumbs/fontan8.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan20.jpg" class="portrait"><img src="images/gallery/fulls/fontan20.jpg" alt="" /></a>
 						</div>
 
 					</div>
@@ -101,7 +101,7 @@
 					<div class="content">
 						<br><br><br>
 						<div class="gallery">
-							<a href="images/gallery/fulls/fontan18.jpg" class="landscape"><img src="images/gallery/thumbs/fontan18.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan25.JPG" class="landscape"><img src="images/gallery/fulls/fontan25.JPG" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
 							<li class="icon solid fa-balance-scale-right">Вместимость шоколада - 2.5 кг.</li>
@@ -168,7 +168,7 @@
 					<div class="content">
 						<br><br><br>
 						<div class="gallery">
-							<a href="images/gallery/fulls/fontan17.jpg" class="landscape"><img src="images/gallery/thumbs/fontan17.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan23.JPG" class="landscape"><img src="images/gallery/fulls/fontan23.JPG" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
 							<li class="icon solid fa-balance-scale-right">Вместимость шоколада - 5 кг.</li>
@@ -336,9 +336,9 @@
 							<div class="gallery">
 								<!-- <a href="images/gallery/fulls/fontan2.jpg" class="portrait"><img src="images/gallery/thumbs/fontan2.jpg" alt="" /></a> -->
 								<a href="images/gallery/fulls/event1_0.jpg" class="portrait"><img src="images/gallery/thumbs/event1_0.jpg" alt="" /></a>
-								<a href="images/gallery/fulls/event1_1.jpg" class="portrait"><img src="images/gallery/thumbs/event1_1.jpg" alt="" /></a>
-								<a href="images/gallery/fulls/event1_5.jpg" class="portrait"><img src="images/gallery/thumbs/event1_5.jpg" alt="" /></a>
-								<a href="images/gallery/fulls/event1_6.jpg" class="portrait"><img src="images/gallery/thumbs/event1_6.jpg" alt="" /></a>
+								<a href="images/gallery/fulls/fontan22.jpg" class="portrait"><img src="images/gallery/fulls/fontan22.jpg" alt="" /></a>
+								<a href="images/gallery/fulls/fontan26.PNG" class="portrait"><img src="images/gallery/fulls/fontan26.PNG" alt="" /></a>
+								<a href="images/gallery/fulls/fontan21.jpg" class="portrait"><img src="images/gallery/fulls/fontan21.jpg" alt="" /></a>
 							</div>
 	
 						</div>
