Add thumbs to the images

--- a/en.html
+++ b/en.html
@@ -85,8 +85,8 @@
 							</ul>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan4.jpg" class="landscape"><img src="images/gallery/thumbs/fontan4.jpg" alt="" /></a>
-							<a href="images/gallery/fulls/fontan2.jpg" class="portrait"><img src="images/gallery/thumbs/fontan2.jpg" alt="" /></a>
-							<a href="images/gallery/fulls/fontan20.jpg" class="portrait"><img src="images/gallery/fulls/fontan20.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan26.PNG" class="portrait"><img src="images/gallery/thumbs/fontan26.png" alt="" /></a>
+							<a href="images/gallery/fulls/fontan20.jpg" class="portrait"><img src="images/gallery/thumbs/fontan20.jpg" alt="" /></a>
 						</div>
 
 					</div>
@@ -101,7 +101,7 @@
 					<div class="content">
 						<br><br><br>
 						<div class="gallery">
-							<a href="images/gallery/fulls/fontan25.JPG" class="landscape"><img src="images/gallery/fulls/fontan25.JPG" alt="" /></a>
+							<a href="images/gallery/fulls/fontan25.JPG" class="landscape"><img src="images/gallery/thumbs/fontan25.jpg" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
 							<li class="icon solid fa-balance-scale-right">Chocolate capacity - 2.5 kg.</li>
@@ -168,7 +168,7 @@
 					<div class="content">
 						<br><br><br>
 						<div class="gallery">
-							<a href="images/gallery/fulls/fontan23.JPG" class="landscape"><img src="images/gallery/fulls/fontan23.JPG" alt="" /></a>
+							<a href="images/gallery/fulls/fontan23.JPG" class="landscape"><img src="images/gallery/thumbs/fontan23.jpg" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
 							<li class="icon solid fa-balance-scale-right">Chocolate capacity - 5 kg.</li>
@@ -336,8 +336,8 @@
 							<div class="gallery">
 								<!-- <a href="images/gallery/fulls/fontan2.jpg" class="portrait"><img src="images/gallery/thumbs/fontan2.jpg" alt="" /></a> -->
 								<a href="images/gallery/fulls/event1_0.jpg" class="portrait"><img src="images/gallery/thumbs/event1_0.jpg" alt="" /></a>
-								<a href="images/gallery/fulls/fontan22.jpg" class="portrait"><img src="images/gallery/fulls/fontan22.jpg" alt="" /></a>
-								<a href="images/gallery/fulls/fontan26.PNG" class="portrait"><img src="images/gallery/fulls/fontan26.PNG" alt="" /></a>
+								<a href="images/gallery/fulls/fontan22.jpg" class="portrait"><img src="images/gallery/thumbs/fontan22.jpg" alt="" /></a>
+								<a href="images/gallery/fulls/fontan24.PNG" class="portrait"><img src="images/gallery/thumbs/fontan24.jpg" alt="" /></a>
 								<a href="images/gallery/fulls/fontan21.jpg" class="portrait"><img src="images/gallery/fulls/fontan21.jpg" alt="" /></a>
 							</div>
 	
