--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 				<!-- Intro -->
 					<section id="home">
 						<header>
-							<br><br><br>
 							<h1>Шоколадный фонтан в Ташкенте ChocoParty</h1>
 							<p></p>
 							<ul class="actions">
@@ -53,11 +52,9 @@
 				<!-- Section -->
 					<section id="about">
 						<header>
-						<br><br><br>
 							<h2>Аренда шоколадного фонтана</h2>
 						</header>
 						<div class="content">
-							<br><br><br>
 							<p><b><i>Уважаемые Дамы и Господа!</i></b></br>Наша компания <b><i>ChocoParty</i></b> рада предложить Вам оригинальный способ сделать Ваш праздник ещё более ярким и незабываемым
 							!</p>
 							<p>Что такое шоколадный фонтан?<br/><i><b>Шоколадный фонтан</b></i> - это настоящий фонтан, но вместо воды в нем циркулирует вкуснейший бельгийский шоколад. По принципу фондю Вы можете обмакивать в шоколаде кусочки различных фруктов, печенья, зефир и т.д.
@@ -70,11 +67,9 @@
 				<!-- Section -->
 				<section id="services">
 					<header>
-						<br><br><br>
 						<h2>Наши услуги</h2>
 					</header>
 					<div class="content">
-						<br><br><br>
 						<p><strong>В наши услуги входит:</strong></p>
 						<div class="content">
 							<ul>
@@ -85,8 +80,8 @@
 							</ul>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan4.jpg" class="landscape"><img src="images/gallery/thumbs/fontan4.jpg" alt="" /></a>
-							<a href="images/gallery/fulls/fontan26.PNG" class="portrait"><img src="images/gallery/thumbs/fontan26.png" alt="" /></a>
-							<a href="images/gallery/fulls/fontan20.jpg" class="portrait"><img src="images/gallery/thumbs/fontan20.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan29.jpg" class="portrait"><img src="images/gallery/fulls/fontan29.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan28.jpg" class="portrait"><img src="images/gallery/fulls/fontan28.jpg" alt="" /></a>
 						</div>
 
 					</div>
@@ -95,11 +90,9 @@
 				<!-- Section -->
 				<section id="small-fountain">
 					<header>
-						<br><br><br>
 						<h2>Маленький шоколадный фонтан</h2>
 					</header>
 					<div class="content">
-						<br><br><br>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan25.JPG" class="landscape"><img src="images/gallery/fulls/fontan25.JPG" alt="" /></a>
 						</div>
@@ -162,11 +155,9 @@
 
 				<section id="big-fountain">
 					<header>
-						<br><br><br>
 						<h2>Средний шоколадный фонтан</h2>
 					</header>
 					<div class="content">
-						<br><br><br>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan23.JPG" class="landscape"><img src="images/gallery/thumbs/fontan23.jpg" alt="" /></a>
 						</div>
@@ -229,13 +220,12 @@
 
 				<section id="extra-big-fountain">
 					<header>
-						<br><br><br>
 						<h2>Большой шоколадный фонтан</h2>
 					</header>
 					<div class="content">
-						<br><br><br>
 						<div class="gallery">
-							<a href="images/gallery/fulls/fountain_5tier_0.jpg" class="landscape"><img src="images/gallery/fulls/fountain_5tier_0.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan27.JPG" class="portrait"><img src="images/gallery/fulls/fontan27.JPG" alt="" /></a>
+							<a href="images/gallery/fulls/fontan30.jpg" class="portrait"><img src="images/gallery/fulls/fontan30.jpg" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
 							<li class="icon solid fa-balance-scale-right">Вместимость шоколада - <b>8 кг</b>.</li>
@@ -297,11 +287,9 @@
 				<!-- Section -->
 					<section id="contact">
 						<header>
-							<br><br><br><br>
 							<h2>Свяжитесь с нами</h2>
 						</header>
 						<div class="content">
-							<br><br><br><br>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
@@ -328,16 +316,14 @@
 
 					<section id="our_works">
 						<header>
-							<br><br><br>
 							<h2>Наши Работы</h2>
 						</header>
 						<div class="content">
-							<br><br><br>
 							<div class="gallery">
 								<!-- <a href="images/gallery/fulls/fontan2.jpg" class="portrait"><img src="images/gallery/thumbs/fontan2.jpg" alt="" /></a> -->
 								<a href="images/gallery/fulls/event1_0.jpg" class="portrait"><img src="images/gallery/thumbs/event1_0.jpg" alt="" /></a>
 								<a href="images/gallery/fulls/fontan22.jpg" class="portrait"><img src="images/gallery/thumbs/fontan22.jpg" alt="" /></a>
-								<a href="images/gallery/fulls/fontan24.PNG" class="portrait"><img src="images/gallery/thumbs/fontan24.jpg" alt="" /></a>
+								<a href="images/gallery/fulls/fontan26.PNG" class="portrait"><img src="images/gallery/thumbs/fontan26.png" alt="" /></a>
 								<a href="images/gallery/fulls/fontan21.jpg" class="portrait"><img src="images/gallery/fulls/fontan21.jpg" alt="" /></a>
 							</div>
 	
@@ -345,7 +331,7 @@
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; ChocoParty 2022.</div>
+					<div class="copyright">&copy; ChocoParty 2023.</div>
 
 			</div>
 
