--- a/uz.html
+++ b/uz.html
@@ -36,7 +36,6 @@
 				<!-- Intro -->
 					<section id="home">
 						<header>
-							<br><br><br>
 							<h1>Shokoladli Favvora Toshkentda ChocoParty</h1>
 							<p></p>
 							<ul class="actions">
@@ -53,11 +52,9 @@
 				<!-- Section -->
 					<section id="about">
 						<header>
-						<br><br><br>
 							<h2>Shokoladli favvora ijarasi</h2>
 						</header>
 						<div class="content">
-							<br><br><br>
 						
 							<p><b><i>Xonimlar va janoblar!</i></b></br>Bizning <b><i>ChocoParty</i></b> kompaniyamiz sizga bayramingizni 
 								yanada yorqinroq va unutilmas qilishning original usulini taklif qilishdan mamnun!
@@ -72,11 +69,9 @@
 				<!-- Section -->
 				<section id="services">
 					<header>
-						<br><br><br>
 						<h2>Bizning hizmatlarimiz</h2>
 					</header>
 					<div class="content">
-						<br><br><br>
 						<p><strong>Bizning xizmatlarimizga quyidagilar kiradi:</strong></p>
 						<div class="content">
 							<ul>
@@ -87,8 +82,8 @@
 							</ul>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan4.jpg" class="landscape"><img src="images/gallery/thumbs/fontan4.jpg" alt="" /></a>
-							<a href="images/gallery/fulls/fontan26.PNG" class="portrait"><img src="images/gallery/thumbs/fontan26.png" alt="" /></a>
-							<a href="images/gallery/fulls/fontan20.jpg" class="portrait"><img src="images/gallery/thumbs/fontan20.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan29.jpg" class="portrait"><img src="images/gallery/fulls/fontan29.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan28.jpg" class="portrait"><img src="images/gallery/fulls/fontan28.jpg" alt="" /></a>
 						</div>
 
 					</div>
@@ -98,11 +93,9 @@
 				<!-- Section -->
 				<section id="small-fountain">
 					<header>
-						<br><br><br>
 						<h2>Kichik shokoladli favvora</h2>
 					</header>
 					<div class="content">
-						<br><br><br>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan25.JPG" class="landscape"><img src="images/gallery/thumbs/fontan25.jpg" alt="" /></a>
 						</div>
@@ -166,11 +159,9 @@
 
 				<section id="big-fountain">
 					<header>
-						<br><br><br>
 						<h2>O'rtacha shokoladli favvora</h2>
 					</header>
 					<div class="content">
-						<br><br><br>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan23.JPG" class="landscape"><img src="images/gallery/thumbs/fontan23.jpg" alt="" /></a>
 						</div>
@@ -233,13 +224,12 @@
 
 				<section id="extra-big-fountain">
 					<header>
-						<br><br><br>
 						<h2>Katta shokoladli favvora</h2>
 					</header>
 					<div class="content">
-						<br><br><br>
 						<div class="gallery">
-							<a href="images/gallery/fulls/fountain_5tier_0.jpg" class="landscape"><img src="images/gallery/fulls/fountain_5tier_0.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan27.JPG" class="portrait"><img src="images/gallery/fulls/fontan27.JPG" alt="" /></a>
+							<a href="images/gallery/fulls/fontan30.jpg" class="portrait"><img src="images/gallery/fulls/fontan30.jpg" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
 							<li class="icon solid fa-balance-scale-right">Shokolad sig'imi - 8 kg.</li>
@@ -302,11 +292,9 @@
 				<!-- Section -->
 					<section id="contact">
 						<header>
-							<br><br><br><br>
 							<h2>Biz bilan bog'laning</h2>
 						</header>
 						<div class="content">
-							<br><br><br><br>
 							<ul class="items">
 								<li>
 									<h3>Elektron pochta</h3>
@@ -332,16 +320,14 @@
 				
 					<section id="our_works">
 						<header>
-							<br><br><br>
 							<h2>Bizning Ishlarimiz</h2>
 						</header>
 						<div class="content">
-							<br><br><br>
 							<div class="gallery">
 								<!-- <a href="images/gallery/fulls/fontan2.jpg" class="portrait"><img src="images/gallery/thumbs/fontan2.jpg" alt="" /></a> -->
 								<a href="images/gallery/fulls/event1_0.jpg" class="portrait"><img src="images/gallery/thumbs/event1_0.jpg" alt="" /></a>
 								<a href="images/gallery/fulls/fontan22.jpg" class="portrait"><img src="images/gallery/thumbs/fontan22.jpg" alt="" /></a>
-								<a href="images/gallery/fulls/fontan24.PNG" class="portrait"><img src="images/gallery/thumbs/fontan24.jpg" alt="" /></a>
+								<a href="images/gallery/fulls/fontan26.PNG" class="portrait"><img src="images/gallery/thumbs/fontan26.png" alt="" /></a>
 								<a href="images/gallery/fulls/fontan21.jpg" class="portrait"><img src="images/gallery/fulls/fontan21.jpg" alt="" /></a>
 							</div>
 	
@@ -349,7 +335,7 @@
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; ChocoParty 2022.</div>
+					<div class="copyright">&copy; ChocoParty 2023.</div>
 
 			</div>
 
