--- a/en.html
+++ b/en.html
@@ -36,7 +36,6 @@
 				<!-- Intro -->
 					<section id="home">
 						<header>
-							<br><br><br>
 							<h1>Chocolate Fountain in Tashkent ChocoParty</h1>
 							<p></p>
 							<ul class="actions">
@@ -53,11 +52,9 @@
 				<!-- Section -->
 					<section id="about">
 						<header>
-						<br><br><br>
 							<h2>Renting Chocolate Fountain</h2>
 						</header>
 						<div class="content">
-							<br><br><br>
 							<p><b><i>Dear Ladies and Gentlemen!</i></b></br>Our company <b><i>ChocoParty</i></b> is glad to offer you an ingenious way to make your celebration brighter and more memorable!
 							!</p>
 							<p>What is a chocolate fountain?<br/><i><b>Chocolate Fountain</b></i> is a genuine fountain, but the tastiest Belgian chocolate is flowing through it, not water. Like fondue, you can dip pieces of various fruits, biscuits, marshmallows, etc. into the chocolate.
@@ -70,11 +67,9 @@
 				<!-- Section -->
 				<section id="services">
 					<header>
-						<br><br><br>
 						<h2>Our services</h2>
 					</header>
 					<div class="content">
-						<br><br><br>
 						<p><strong>Our services include:</strong></p>
 						<div class="content">
 							<ul>
@@ -85,8 +80,8 @@
 							</ul>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan4.jpg" class="landscape"><img src="images/gallery/thumbs/fontan4.jpg" alt="" /></a>
-							<a href="images/gallery/fulls/fontan26.PNG" class="portrait"><img src="images/gallery/thumbs/fontan26.png" alt="" /></a>
-							<a href="images/gallery/fulls/fontan20.jpg" class="portrait"><img src="images/gallery/thumbs/fontan20.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan29.jpg" class="portrait"><img src="images/gallery/fulls/fontan29.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan28.jpg" class="portrait"><img src="images/gallery/fulls/fontan28.jpg" alt="" /></a>
 						</div>
 
 					</div>
@@ -95,11 +90,9 @@
 				<!-- Section -->
 				<section id="small-fountain">
 					<header>
-						<br><br><br>
 						<h2>Small chocolate fountain</h2>
 					</header>
 					<div class="content">
-						<br><br><br>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan25.JPG" class="landscape"><img src="images/gallery/thumbs/fontan25.jpg" alt="" /></a>
 						</div>
@@ -162,11 +155,9 @@
 
 				<section id="big-fountain">
 					<header>
-						<br><br><br>
 						<h2>Medium chocolate fountain</h2>
 					</header>
 					<div class="content">
-						<br><br><br>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan23.JPG" class="landscape"><img src="images/gallery/thumbs/fontan23.jpg" alt="" /></a>
 						</div>
@@ -229,13 +220,12 @@
 
 				<section id="extra-big-fountain">
 					<header>
-						<br><br><br>
 						<h2>Big Chocolate Fountain</h2>
 					</header>
 					<div class="content">
-						<br><br><br>
 						<div class="gallery">
-							<a href="images/gallery/fulls/fountain_5tier_0.jpg" class="landscape"><img src="images/gallery/fulls/fountain_5tier_0.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan27.JPG" class="portrait"><img src="images/gallery/fulls/fontan27.JPG" alt="" /></a>
+							<a href="images/gallery/fulls/fontan30.jpg" class="portrait"><img src="images/gallery/fulls/fontan30.jpg" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
 							<li class="icon solid fa-balance-scale-right">Chocolate Capactiy - <b>8 kg</b>.</li>
@@ -298,11 +288,9 @@
 				<!-- Section -->
 					<section id="contact">
 						<header>
-							<br><br><br><br>
 							<h2>Contact Us</h2>
 						</header>
 						<div class="content">
-							<br><br><br><br>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
@@ -328,16 +316,14 @@
 
 					<section id="our_works">
 						<header>
-							<br><br><br>
 							<h2>Our Works</h2>
 						</header>
 						<div class="content">
-							<br><br><br>
 							<div class="gallery">
 								<!-- <a href="images/gallery/fulls/fontan2.jpg" class="portrait"><img src="images/gallery/thumbs/fontan2.jpg" alt="" /></a> -->
 								<a href="images/gallery/fulls/event1_0.jpg" class="portrait"><img src="images/gallery/thumbs/event1_0.jpg" alt="" /></a>
 								<a href="images/gallery/fulls/fontan22.jpg" class="portrait"><img src="images/gallery/thumbs/fontan22.jpg" alt="" /></a>
-								<a href="images/gallery/fulls/fontan24.PNG" class="portrait"><img src="images/gallery/thumbs/fontan24.jpg" alt="" /></a>
+								<a href="images/gallery/fulls/fontan26.PNG" class="portrait"><img src="images/gallery/thumbs/fontan26.png" alt="" /></a>
 								<a href="images/gallery/fulls/fontan21.jpg" class="portrait"><img src="images/gallery/fulls/fontan21.jpg" alt="" /></a>
 							</div>
 	
@@ -345,7 +331,7 @@
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; ChocoParty 2022.</div>
+					<div class="copyright">&copy; ChocoParty 2023.</div>
 
 			</div>
 
