Fixing images full view

--- a/uz.html
+++ b/uz.html
@@ -97,7 +97,7 @@
 					</header>
 					<div class="content">
 						<div class="gallery">
-							<a href="images/gallery/fulls/fontan25.JPG" class="landscape"><img src="images/gallery/thumbs/fontan25.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan25.jpg" class="landscape"><img src="images/gallery/thumbs/fontan25.jpg" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
 							<li class="icon solid fa-balance-scale-right">Shokolad sig'imi - 2.5 kg.</li>
@@ -163,7 +163,7 @@
 					</header>
 					<div class="content">
 						<div class="gallery">
-							<a href="images/gallery/fulls/fontan23.JPG" class="landscape"><img src="images/gallery/thumbs/fontan23.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan23.jpg" class="landscape"><img src="images/gallery/thumbs/fontan23.jpg" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
 							<li class="icon solid fa-balance-scale-right">Shokolad sig'imi - 5 kg.</li>
@@ -228,7 +228,7 @@
 					</header>
 					<div class="content">
 						<div class="gallery">
-							<a href="images/gallery/fulls/fontan27.JPG" class="portrait"><img src="images/gallery/fulls/fontan27.JPG" alt="" /></a>
+							<a href="images/gallery/fulls/fontan27.jpg" class="portrait"><img src="images/gallery/fulls/fontan27.jpg" alt="" /></a>
 							<a href="images/gallery/fulls/fontan30.jpg" class="portrait"><img src="images/gallery/fulls/fontan30.jpg" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
@@ -327,7 +327,7 @@
 								<!-- <a href="images/gallery/fulls/fontan2.jpg" class="portrait"><img src="images/gallery/thumbs/fontan2.jpg" alt="" /></a> -->
 								<a href="images/gallery/fulls/event1_0.jpg" class="portrait"><img src="images/gallery/thumbs/event1_0.jpg" alt="" /></a>
 								<a href="images/gallery/fulls/fontan22.jpg" class="portrait"><img src="images/gallery/thumbs/fontan22.jpg" alt="" /></a>
-								<a href="images/gallery/fulls/fontan26.PNG" class="portrait"><img src="images/gallery/thumbs/fontan26.png" alt="" /></a>
+								<a href="images/gallery/fulls/fontan26.png" class="portrait"><img src="images/gallery/thumbs/fontan26.png" alt="" /></a>
 								<a href="images/gallery/fulls/fontan21.jpg" class="portrait"><img src="images/gallery/fulls/fontan21.jpg" alt="" /></a>
 							</div>
 	
